--- a/class4/templates/spring_class3.html
+++ b/class4/templates/spring_class3.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investigation Form</title>
+    <title>資料表</title>
 </head>
 <body>
     <h2>Investigation Form</h2>
@@ -20,7 +18,7 @@
         <label for="birthday">Birthday and time:</label>
         <input type="datetime-local" id="birthday" name="birthday" required><br><br>
 
-        <p>Which technology are you most interested in?</p>
+        <p>喜歡哪個</p>
         <input type="radio" id="html" name="tech" value="HTML" required>
         <label for="html">HTML</label><br>
         <input type="radio" id="css" name="tech" value="CSS">
